Refactor commands and add track loading features
- Added new XML namespaces and converters in App.xaml and GameView.xaml
- Replaced DelegateCommand implementation with improved version
- Added 'None' value to Orientation enum
- Updated SlotcarRennenM320.csproj to manage resources and folders
- Updated GameViewModel and MainMenuViewModel to use new DelegateCommand
- Added methods to load game data and reload track in GameViewModel
- Simplified GameView layout and data binding
- Added default.xml for track layout definition
- Added OrientationToAngleConverter and OrientationToVisibilityConverter
- Added TrackLoader service for loading track data with error handling

--- a/SlotcarRennenM320/SlotcarRennenM320.csproj
+++ b/SlotcarRennenM320/SlotcarRennenM320.csproj
@@ -10,13 +10,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\Tracks\default.xml" />
     <None Remove="Images\BG.png" />
     <None Remove="Images\car-icon.ico" />
     <None Remove="Images\car.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
+    <Resource Include="Assets\Tracks\default.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Icon\" />
   </ItemGroup>
 
